--- a/client/user/src/pages/UserDetails.css
+++ b/client/user/src/pages/UserDetails.css
@@ -8,12 +8,12 @@ h1{
 table{
     width: 90%;
     margin: auto;
-    border-spacing: 1rem;
+    /* border-spacing: 1rem; */
 }
 tr,th,td{
     /* border: 1px solid red; */
     border-collapse: collapse;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 
    
 }
@@ -31,12 +31,18 @@ th{
   
 }
 tr{
-    background-color: aqua;
+    /* background-color: aqua; */
+    border: 1px solid red;
     padding: 10px;
     margin-top: 50px;
 
   
 }
+tr:nth-child(even) {
+    background-color: grey;
+    color: white;
+  }
+
 /* .data{
     width: 20px;
 } */
